# jsonapi-transformer

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile.testing  LICENSE.txt  README.md  pyproject.toml  setup.cfg
.github/: pull_request_template.md
src/transformers/: __init__.py  exceptions.py  factories.py  transformers.py
src/transformers/impl/: __init__.py  factories_impl.py  transformers_impl.py
tests/: test_factories.py  test_transformers.py
tests/data/: data_transformers.py  sample_transformers.py
