[metadata]
name = jsonapi-transformer
version = 0+replace.me.app.version
author = Boost Digital Insurance
author_email = techopensource@boostdigitalinsurance.io
description = A Python library for producing, consuming, and manipulating JSON:API data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/boost-insurance/jsonapi-transformer
project_urls =
    Bug Tracker = https://github.com/boost-insurance/jsonapi-transformer/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Typing :: Typed
license_files =
    LICENSE.txt

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    pytest-cov
    pytest-clarity
    # Not strictly needed for tests, but needed for CI static analysis:
    black==22.3.0
    flake8-bugbear
    flake8
    isort
    mypy
dev =
    pytest
    pytest-cov
    pytest-clarity
    black==22.3.0
    flake8-bugbear
    flake8
    isort
    mypy
    pre-commit
    rich

[flake8]
exclude = .eggs,.git,.venv,_build,build,dist,__pycache__
extend-ignore = E503
select = C,E,F,W,B
max-line-length = 99
max-complexity = 13

[coverage:run]
source = src
